--- a/webexam2024/style.css
+++ b/webexam2024/style.css
@@ -1,29 +1,64 @@
+/* styling for the webpage */
 * {
     font-family: sans-serif;
-    font-weight: bold;
+
 }
 
-.grid.container {
+/* grid container for the webpage */
+#grid-container {
     display:grid;
     grid-template-areas: "header"
                          "main"
                          "footer";
 
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
 }
 
+/* margin for the webpage */
+body {
+    margin: 20px;
+    font-weight: bold;
+}
+
+/* grid areas for the header, main and footer */
 header {
     grid-area: header;
 }
 
 main {
     grid-area: main;
+    
 }
 
 footer {
     grid-area: footer;
 }
 
+/* flex container and for the search bar in the header */
+.searchBarFlexContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+}
+
+/* styling for the search bar in the header */
+.searchBar {
+    border:3px solid #000000;
+    padding: 8px;
+    font-size: 1.1em;
+}
+
+/* styling for the search icon in the header */
+.searchIcon {
+    width: 18px;
+    height: 18px;
+    padding: 10px 18px 9px 18px;
+    border:3px solid #000000;
+}
+
+/* Settings for the link text styling in the nav */
 a {
     text-decoration: none;
 }
@@ -37,20 +72,95 @@ ul {
     padding: 0px;
 }
 
+/* flex container and items for the nav in the header */
 .headerNavFlex {
     display: flex;
     flex-direction: column;
     height: 200px;
-
 }
 
 .logoFlex {
-    /*font-size: 3rem;*/
     flex-grow: 2;
     font-size: 3em;
+    font-weight: 900;
 }
 
-.navListFlex {
+.listFlex {
     flex-grow: 1;
     font-size: 1.2em;
+}
+
+/* overrideing the color of the text specifically in the a-tag for the nav */
+.listFlex a {
+    color: #323232;
+}
+
+/* flex container and items for the icons in the header */
+.headerNavIconFlex {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+}
+
+/* styling for the icons in the header */
+li a img {
+    width: 34px;
+    height: 34px;
+}
+
+/* styling any text with align right */
+.alignTextRight {
+    text-align: right;
+}
+
+/* styling for the banner */
+.banner {
+    background-color: #cccccc;
+    padding-bottom: 3em;
+}
+
+/* styling for the banner text */
+.banner h2 {
+    font-weight: 1000;
+    font-size: 2em;
+    padding: 2em 1em 0em 4em;
+}
+
+/* styling for the banner article */
+.banner article {
+    padding: 0em 1em 2em 4em;
+    font-size: 1.4em;
+}
+
+/* styling for the banner button */
+.banner button {
+    background-color: #fff;
+    color: #000;
+    font-size: 1em;
+    float: right;
+    padding: 20px;
+    font-size: 0.9em;
+    font-weight: 600;
+    border: none;
+}
+
+#grid-container-products {
+    display:grid;
+    grid-template-areas: "productHeader"
+                         "productButtons"
+                         "prdoductArticles";
+
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.productHeader {
+    grid-area: productHeader;
+    padding: 0px 50px 0px 50px;
+}
+
+.productButton {
+    grid-area: productButtons;
+    display: flex;
+    flex-direction: row;
 }
