--- a/webexam2024/style.css
+++ b/webexam2024/style.css
@@ -16,7 +16,7 @@
 
 /* margin for the webpage */
 body {
-    margin: 20px;
+    margin: 1em;
     font-weight: bold;
 }
 
@@ -38,7 +38,7 @@ footer {
 .searchBarFlexContainer {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -55,6 +55,13 @@ footer {
     height: 18px;
     padding: 10px 18px 9px 18px;
     border:3px solid #000000;
+    background-color: #fff;
+    margin-left: 8px;
+}
+
+.searchButton {
+    background-color: #fff;
+    border: none;
 }
 
 /* Settings for the link text styling in the nav */
@@ -331,6 +338,10 @@ hr {
 
 .removeMarginTop {
     margin-top: 0px;
+}
+
+.removePadding {
+    padding: 0px;
 }
 
 .maxWidth150 {
