--- a/webexam2024/style.css
+++ b/webexam2024/style.css
@@ -405,6 +405,10 @@ hr {
 }
 
 .breadCrumbs {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    column-gap: 0.5em;
     font-size: 1.8em;
 }
 
